fix command autocomplete and typing indicator overlapping

--- a/app/style.css
+++ b/app/style.css
@@ -280,7 +280,7 @@ body.login-page a button:hover {
 }
 #command-suggestion {
   position: fixed;
-  bottom: 68px;
+  bottom: 88px;
   left: 20px;
   font-size: 12px;
   color: var(--muted);
@@ -450,8 +450,13 @@ body:has(#dev-banner) #version-status {
   #userlist div::after {
     content: ' ';
   }
-  #typing-indicator, #command-suggestion {
+  #typing-indicator { 
     bottom: 128px;
+    left: 12px;
+    font-size: 10px;
+  }
+  #command-suggestion {
+    bottom: 148px;
     left: 12px;
     font-size: 10px;
   }
